# wavrec

./: .gitignore  CMakeLists.txt  REQUIREMENTS.md
.claude/: settings.local.json
docs/: ENGINE_THREADING.md  IPC_PROTOCOL.md
engine/: CMakeLists.txt
engine/src/: engine.c  engine.h  main.c
engine/src/audio/: asio_engine.h  audio_io.c  audio_io.h  miniaudio_asio.cpp  miniaudio_asio.h  miniaudio_impl.c  mixer.c  mixer.h  playback_engine.c  playback_engine.h  record_engine.c  record_engine.h
engine/src/compat/msvc/: stdatomic.h
engine/src/disk/: disk_writer.c  disk_writer.h
engine/src/ipc/: ipc.c  ipc.h  ipc_protocol.h  ipc_shm.c  ipc_shm.h
engine/src/metadata/: bwf.c  bwf.h  ixml.c  ixml.h  wav_reader.c  wav_reader.h
engine/src/meter/: metering.c  metering.h
engine/src/platform/: platform.h  platform_posix.c  platform_win32.c
engine/src/timecode/: timecode.c  timecode.h
engine/src/track/: track.c  track.h
engine/src/transcription/: transcription.c  transcription.h
engine/src/util/: crc32.c  crc32.h  ringbuf.h
engine/src/waveform/: waveform.c  waveform.h
ui/: build.gradle.kts  settings.gradle.kts
ui/composeApp/: build.gradle.kts
ui/composeApp/src/commonMain/kotlin/com/wavrec/engine/: EngineEvents.kt
ui/composeApp/src/commonMain/kotlin/com/wavrec/model/: Models.kt
ui/composeApp/src/desktopMain/kotlin/com/wavrec/: Main.kt
ui/composeApp/src/desktopMain/kotlin/com/wavrec/engine/: EngineRunner.kt  MeteringReader.kt  WaveformBuffers.kt  WfmReader.kt
ui/composeApp/src/desktopMain/kotlin/com/wavrec/model/: AppViewModel.kt
ui/composeApp/src/desktopMain/kotlin/com/wavrec/ui/: FolderHeader.kt  FolderTargetBar.kt  FolderTargetsDialog.kt  SettingsBar.kt  TrackHeader.kt  TrackList.kt  TransportBar.kt  VuMeter.kt  WavRecApp.kt  WaveformStrip.kt
ui/gradle/: libs.versions.toml
